--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a id="navbar-brand" class="navbar-brand" href="#">Sia<strong>Kovalina</strong></a>
+          <a id="navbar-brand" class="navbar-brand" href="#">Ryan<strong>Bonhardt</strong></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Home</a></li>
-            <li class="active"><a href="./">Blog<span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-            <li><a href="#">Forth li</a></li>
+            <li class="active"><a href="../navbar/">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="posts/first-post.html">Posts</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
