--- a/about.html
+++ b/about.html
@@ -74,13 +74,20 @@
 
           <div id="about" class="col-md-10 col-md-offset-1 blog-main">
 
-            <img src="about.jpg" alt="SiaKovalina" height="300px">
-            <h1>Welcome to RyanBonhardt.com<br>My goal is to be a world-class learner and teacher.</h1>
-            <p id="first-paragraph">I’m the founder at Maker Based Education where we’re working to help schools bridge the gap between what students should be and are learning. I have a dream that one day every student will have the chance to learn skills (both hard and soft) that will equip them to be powerful in the real world.
+            <div class="row">
 
-            I’m also the Online Director at Miles 2 Give where we run across and around countries (10,000+ miles around the US this year) to help raise money for Sarcoma cancer research.
+              <div class="col-sm-4 xs-center">
+                <img src="about.jpg" alt="RyanBonhardt" height="300px">
+              </div>
+              <div class="col-sm-8">
+                <h1>Welcome to RyanBonhardt.com<br>My goal is to be a world-class learner and teacher.</h1>
+              </div>
+            </div>
+                <p id="first-paragraph">I’m the founder at Maker Based Education where we’re working to help schools bridge the gap between what students should be and are learning. I have a dream that one day every student will have the chance to learn skills (both hard and soft) that will equip them to be powerful in the real world.
 
-            You can find my short writings on twitter here. I write and contribute mainly at Maker Based Blog where you can learn skills to help you kick ass in today’s marketplace and of course plenty of learning hacks. Sometimes I write on Medium about whatever gets me excited, mainly educational reform and policy.</p>
+                I’m also the Online Director at Miles 2 Give where we run across and around countries (10,000+ miles around the US this year) to help raise money for Sarcoma cancer research.
+
+                You can find my short writings on twitter here. I write and contribute mainly at Maker Based Blog where you can learn skills to help you kick ass in today’s marketplace and of course plenty of learning hacks. Sometimes I write on Medium about whatever gets me excited, mainly educational reform and policy.</p>            
 
           </div><!-- /.blog-main -->  
 
