--- a/portfolio.html
+++ b/portfolio.html
@@ -70,21 +70,46 @@
 
       <div class="container">
 
-        <div class="row">
+        <div class="example">
+          <p>Div 1</p>
+        </div>
 
-          <div id="about" class="col-md-10 col-md-offset-1 blog-main">
+        <div class="example">
+          <p>Div 2</p>
+        </div>
 
-            <img src="about.jpg" alt="SiaKovalina" height="300px">
-            <h1>Welcome to RyanBonhardt.com<br>My goal is to be a world-class learner and teacher.</h1>
-            <p id="first-paragraph">I’m the founder at Maker Based Education where we’re working to help schools bridge the gap between what students should be and are learning. I have a dream that one day every student will have the chance to learn skills (both hard and soft) that will equip them to be powerful in the real world.
+        <div class="example">
+          <p>Div 3</p>
+        </div>
 
-            I’m also the Online Director at Miles 2 Give where we run across and around countries (10,000+ miles around the US this year) to help raise money for Sarcoma cancer research.
+        <p>There's some extra text</p>
 
-            You can find my short writings on twitter here. I write and contribute mainly at Maker Based Blog where you can learn skills to help you kick ass in today’s marketplace and of course plenty of learning hacks. Sometimes I write on Medium about whatever gets me excited, mainly educational reform and policy.</p>
+        <div class="row-example">
+          <div class="example-2">
+            <div class="inner-example">
+              <img src="post-image.jpg">
+              <h3>There'some sample text</h3>
+              <p>There's some sample description for each photo.</p>
+            </div>
+          </div>
 
-          </div><!-- /.blog-main -->  
+          <div class="example-2">
+            <div class="inner-example">
+              <img src="post-image.jpg">
+              <h3>There'some sample text</h3>
+              <p>There's some sample description for each photo.</p>
+            </div>
+          </div>
 
-        </div><!-- /.row -->
+          <div class="example-2">
+            <div class="inner-example">
+              <img src="post-image.jpg">
+              <h3>There'some sample text</h3>
+              <p>There's some sample description for each photo.</p>
+            </div>
+          </div>
+
+        </div><!--/.row-example -->
 
       </div><!-- /.container -->
     </div>
