--- a/blog.html
+++ b/blog.html
@@ -6,29 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="The sample blog post built using Bootstrap">
+    <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
     <title>Blog-project</title>
 
-    <meta property="og:title" content="Ryan Bonhardt Blog | Sample Blog Post">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://siakovalina.github.io/udemy-blog">
-    <meta property="og:image" content="https://siakovalina.github.io/udemy-blog/post-image.jpg">
-    <meta property="og:description" content="The sample of the first built blog post">
-
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- FontAwesome -->
-    <link rel="stylesheet" type="text/css" href="../fonts/font-awesome/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/blog.css" rel="stylesheet">
+    <link href="css/blog.css" rel="stylesheet">
 
     <!-- Font Open-Sans -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
@@ -62,14 +53,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a id="navbar-brand" class="navbar-brand" href="../index.html">ryan<strong>Bonhardt</strong></a>
+          <a id="navbar-brand" class="navbar-brand" href="#">Ryan<strong>Bonhardt</strong></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../about.html">About</a></li>
-            <li class="active"><a href="#">Blog</a></li>
-            <li><a href="../portfolio.html">Portfolio</a></li>
+            <li class="active"><a href="../navbar/">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="posts/first-post.html">Blog</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -87,7 +78,7 @@
               <h2 class="blog-post-title"><a href="posts/first-post.html">Sample blog post</a></h2>
               <p class="blog-post-meta"><a href="blog-post-link#comments"type="button" class="btn btn-danger">55 comments</a>  January 1, 2014 by <a href="#">Mark</a></p>
 
-              <img src="../post-image.jpg">
+              <img src="post-image.jpg">
 
               <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
               <hr>
@@ -142,11 +133,6 @@
               </ul>
               <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
               <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-              <div class="social">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://siakovalina.github.io/udemy-blog" rel="nofollow" target="_blank" class="btn btn-primary btn-sm" title="Share on Facebook"><i class="fa fa-facebook-f fa-lg"></i></a>
-                <a href="https://plus.google.com/share?url=https://siakovalina.github.io/udemy-blog" rel="nofollow" target="_blank" class="btn btn-danger btn-sm" title="Share on Google"><i class="fa fa-google-plus fa-lg"></i></a>
-                <a href="https://twitter.com/intent/tweet?url=https://siakovalina.github.io/udemy-blog/" rel="nofollow" target="_blank" class="btn btn-info btn-sm" title="Share on Twitter"><i class="fa fa-twitter fa-lg"></i></a>
-              </div>
             </div><!-- /.blog-post -->
 
             <nav>
