--- a/index.html
+++ b/index.html
@@ -43,152 +43,51 @@
 
   <body>
 
-  <!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a id="navbar-brand" class="navbar-brand" href="#">Ryan<strong>Bonhardt</strong></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="../navbar/">Blog</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="posts/first-post.html">Posts</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div id="blog-masthead">
+    <div id="home-top" class="blog-main">
 
       <div class="container">
 
-        <div class="row">
+            <div class="row">
 
-          <div class="col-sm-8 blog-main">
-
-            <div class="blog-post">
-              <h2 class="blog-post-title"><a href="posts/first-post.html">Sample blog post</a></h2>
-              <p class="blog-post-meta"><a href="blog-post-link#comments"type="button" class="btn btn-danger">55 comments</a>  January 1, 2014 by <a href="#">Mark</a></p>
-
-              <img src="post-image.jpg">
-
-              <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-              <hr>
-              <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-              <blockquote>
-                <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              </blockquote>
-              <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-              <h2>Heading</h2>
-              <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-              <h3>Sub-heading</h3>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-              <pre><code>Example code block</code></pre>
-              <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-              <h3>Sub-heading</h3>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-              <ul>
-                <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-                <li>Donec id elit non mi porta gravida at eget metus.</li>
-                <li>Nulla vitae elit libero, a pharetra augue.</li>
-              </ul>
-              <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-              <ol>
-                <li>Vestibulum id ligula porta felis euismod semper.</li>
-                <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-                <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-              </ol>
-              <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis. <a href="blog-post">Read More...</a></p>
-            </div><!-- /.blog-post -->
-
-            <div class="blog-post">
-              <h2 class="blog-post-title">Another blog post</h2>
-              <p class="blog-post-meta">December 23, 2013 by <a href="#">Jacob</a></p>
-
-              <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-              <blockquote>
-                <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              </blockquote>
-              <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-              <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            </div><!-- /.blog-post -->
-
-            <div class="blog-post">
-              <h2 class="blog-post-title">New feature</h2>
-              <p class="blog-post-meta">December 14, 2013 by <a href="#">Chris</a></p>
-
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-              <ul>
-                <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-                <li>Donec id elit non mi porta gravida at eget metus.</li>
-                <li>Nulla vitae elit libero, a pharetra augue.</li>
-              </ul>
-              <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-              <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            </div><!-- /.blog-post -->
-
-            <nav>
-              <ul class="pager">
-                <li><a href="#">Previous</a></li>
-                <li><a href="#">Next</a></li>
-              </ul>
-            </nav>
-
-          </div><!-- /.blog-main -->
-
-          <div class="col-sm-4 blog-sidebar">
-            <div id="subscribe-box" class="sidebar-module sidebar-module-inset">
-              <h4>Like what you-re reading? Go VIP!</h4>
-              <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur. </p>
-              <form role="form" action="//facebook.us15.list-manage.com/subscribe/post?u=d45c5fd2b84e52a43a85d1cc6&amp;id=559ef3e7dd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div class="form-group">
-                  <input type="email" class="form-control" id="mce-EMAIL" value="" name="EMAIL" placeholder="Enter email">
+              <div class="col-sm-4 xs-center">
+                <img src="about.jpg" alt="RyanBonhardt" height="300px">
+              </div>
+              <div class="col-sm-8">
+                <h1>I send out learning tips, cool material, share resourses for inspiration, growth-hacking and a lot of other cool staff  </h1>
+                <div class="row">
+                  <form role="form" action="//facebook.us15.list-manage.com/subscribe/post?u=d45c5fd2b84e52a43a85d1cc6&amp;id=559ef3e7dd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div class="col-sm-9">
+                      <div class="form-group">
+                        <input type="email" class="form-control" id="mce-EMAIL" value="" name="EMAIL" placeholder="Enter email">
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                    <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display:none"></div>
+                      <div class="response" id="mce-success-response" style="display:none"></div>
+                      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d45c5fd2b84e52a43a85d1cc6_559ef3e7dd" tabindex="-1" value="">
+                    </div>
+                      <p class="center"><a type="submit" class="btn btn-warning">Join The Fun</a></p>
+                    </div>
+                  </form>
                 </div>
-                <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
-                  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d45c5fd2b84e52a43a85d1cc6_559ef3e7dd" tabindex="-1" value="">
-                </div>
-                  <p class="center"><a type="submit" class="btn btn-warning">Join For Free</a></p>
-              </form>
+              </div>
             </div>
-            <div id="post-box" class="sidebar-module">
-              <h4>Most popular posts</h4>
-              <ol>
-                <li><a href="#">The 1st most popular</a></li>
-                <li><a href="#">The second most popular</a></li>
-                <li><a href="#">this was popular</a></li>
-                <li><a href="#">So as this, but this is a longer message to see that it goes to the next line</a></li>
-              </ol>
-            </div>
-            <div class="sidebar-module">
-              <h4>Elsewhere</h4>
-              <ol class="list-unstyled">
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Facebook</a></li>
-              </ol>
-            </div>
-          </div><!-- /.blog-sidebar -->
+          </div><!-- /.container -->
+         </div><!-- /.blog-masthead -->
 
-        </div><!-- /.row -->
+         <div class="container blog-main">
+                <p id="first-paragraph-home">I’m the founder at Maker Based Education where we’re working to help schools bridge the gap between what students should be and are learning. I have a dream that one day every student will have the chance to learn skills (both hard and soft) that will equip them to be powerful in the real world.
 
-      </div><!-- /.container -->
-    </div>
-    <footer class="blog-footer">
+                I’m also the Online Director at Miles 2 Give where we run across and around countries (10,000+ miles around the US this year) to help raise money for Sarcoma cancer research.
+
+                Head over to my <a href="blog.html">blog</a> and check out my <a href="about.html">about page</a> to learn more about me.</p>
+          </div> 
+
+
+    <footer class="blog-footer sticky-footer">
       <p>&#169; 2017 SiaKovalina. Have any questions or just want to drop me a line? Email me at <a href="mailto:siakovalina@gmail.com" target="_blank">siakovalina@gmail.com</a></p>
-      <p>
-        <a href="#navbar-brand">Back to top</a>
-      </p>
     </footer>
 
 
