--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Blog</a></li>
+            <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About</a></li>
-            <li><a href="posts/first-post.html">Posts</a></li>
+            <li><a href="posts/first-post.html">Blog</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
           </ul>
         </div><!--/.nav-collapse -->
