--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div> 
 
 
-    <footer class="blog-footer sticky-footer">
+    <footer class="blog-footer">
       <p>&#169; 2017 SiaKovalina. Have any questions or just want to drop me a line? Email me at <a href="mailto:siakovalina@gmail.com" target="_blank">siakovalina@gmail.com</a></p>
     </footer>
 
